tests/workflows/tests/snapshots/tools__bench_single_package_json_success_envelope.snap
---
source: tests/workflows/tests/tools.rs
expression: envelope
---
{
  "success": true,
  "packages": 1,
  "succeeded": 1,
  "failed": 0,
  "duration_ms": 0,
  "members": [
    {
      "name": "json-bench-runner",
      "success": true,
      "exit_code": 0,
      "duration_ms": 0
    }
  ]
}
