tests/workflows/tests/snapshots/tools__lint_single_failure.snap
---
source: tests/workflows/tests/tools.rs
expression: value
---
{
  "success": false,
  "packages": 1,
  "succeeded": 0,
  "failed": 1,
  "duration_ms": 0,
  "members": [
    {
      "name": "lint-json",
      "success": false,
      "exit_code": 7,
      "duration_ms": 0,
      "stdout": "lint-diagnostic\n",
      "stderr": "lint-error\n"
    }
  ]
}
