tests/workflows/tests/snapshots/tools__test_single_package_json_success_envelope.snap
---
source: tests/workflows/tests/tools.rs
assertion_line: 1003
expression: envelope
---
{
  "success": true,
  "packages": 1,
  "succeeded": 1,
  "failed": 0,
  "duration_ms": 0,
  "members": [
    {
      "name": "json-test-runner",
      "success": true,
      "exit_code": 0,
      "duration_ms": 0
    }
  ]
}
